<resources>
    <string name="app_name">Tietokanta</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_number">num</string>
    <string name="input_name">name</string>
    <string name="input_edition">edition</string>
    <string name="input_date">Choose Your Target Date</string>
    <string name="add_new">ADD NEW</string>
    <string name="delete_first">DELETE FIRST</string>
    <string name="sort_by">SORT BY</string>
    <string name="book_title_label">Book Title</string>
    <string name="book_title_hint">book title</string>
    <string name="book_date_label">Date</string>
    <string name="book_solved_label">Have you read the book?</string>
    <string name="book_number_label">Book Number</string>
    <string name="book_number_hint">book number</string>
    <string name="book_edition_label">Book Edition</string>
    <string name="book_edition_hint">book edition</string>
    <string name="book_solved_hint">- Yes / No</string>
    <string name="book_num">Book Num</string>
    <string name="book_title">Book Title</string>
    <string name="book_num_placeholder_ordinal">%s.</string>
    <string name="sorting_strategy">Sorting Strategy</string>
    <string name="sort_by_lowercase">Sort By</string>
    <string name="name_asc">Name (Asc)</string>
    <string name="name_desc">Name (Desc)</string>
    <string name="number_asc">Number (Asc)</string>
    <string name="number_desc">Number (Desc)</string>
    <string name="reset_selection">Reset</string>
    <string name="apply">Apply</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="a_photo_has_been_taken_successfully">A Photo was taken.\nYou can find it by adding a new card (ADD NEW)</string>
    <string name="photo_imageview">photo imageview</string>
    <string name="bigger_picture">bigger picture</string>
    <string name="delete_book">Delete book</string>
    <string name="are_u_sure_delete_book">Are you sure you want to delete this book?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>