<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/book_number"
            android:inputType="numberSigned"
            android:hint="@string/input_number"
            android:importantForAutofill="no"
            android:maxLength="3"
            style="@style/CustomEditText"/>

        <EditText
            android:id="@+id/book_name"
            android:hint="@string/input_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxWidth="170dp"
            android:maxLength="30"
            style="@style/CustomEditText" />

        <EditText
            android:id="@+id/book_edition"
            android:inputType="numberSigned"
            android:hint="@string/input_edition"
            android:importantForAutofill="no"
            android:maxLength="1"
            style="@style/CustomEditText" />

    </LinearLayout>

    <Button
        android:id="@+id/purchase_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/input_date"
        tools:text="@string/input_date"/>

    <TextView
        android:id="@+id/photo_success"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="50dp"
        android:scrollHorizontally="true"
        tools:text="A Photo was taken.\nYou can find it by adding a new card (ADD NEW)" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_height="wrap_content"
            android:text="@string/add_new" />

        <Button
            android:id="@+id/remove_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_first" />

        <Button
            android:id="@+id/sort_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:layout_marginStart="25dp" />

    </LinearLayout>

</LinearLayout>